Updated README and fixed navbar z-index

--- a/frontend/user/src/App.css
+++ b/frontend/user/src/App.css
@@ -8,6 +8,7 @@
   padding-right:0.5em;
   position:fixed;
   width:100% !important;
+  z-index:999;
 }
 
 .nav-topbar a{
